--- a/.github/workflows/checksums.yml
+++ b/.github/workflows/checksums.yml
@@ -26,3 +26,9 @@ jobs:
           git commit -m "Checksum upload"
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v3
+        with:
+          branch: checksums
+          delete-branch: true
+          title: '[auto] Update checksums'
+          body: |
+                Added checksums for the latest commit
