--- a/.github/workflows/checksums.yml
+++ b/.github/workflows/checksums.yml
@@ -4,7 +4,7 @@ name: checksums
 on:
   push:
     branches:
-      - main
+      - master
   workflow_dispatch:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
