--- a/.github/workflows/checksums.yml
+++ b/.github/workflows/checksums.yml
@@ -24,11 +24,4 @@ jobs:
           sha256sum ./* > sha256sums.txt
           git add sha256sums.txt
           git commit -m "Checksum upload"
-      - name: Create Pull Request
-        uses: peter-evans/create-pull-request@v3
-        with:
-          branch: checksums
-          delete-branch: true
-          title: '[auto] Update checksums'
-          body: |
-                Added checksums for the latest commit
+          git push origin master
